--- a/.github/workflows/update-issue-status-in-test.yml
+++ b/.github/workflows/update-issue-status-in-test.yml
@@ -14,10 +14,11 @@ jobs:
 
     - name: Update issue status to "In Test"
       run: |
-        # Extract issue number from PR title or branch name
         issue_number=$(echo "${{ github.head_ref }}" | grep -oP 'issue-\K[0-9]+')
-        
-        # Assuming you have the GitHub CLI installed and authenticated
-        gh issue edit "$issue_number" --add-label "In Test"
+        curl -X PATCH \
+          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Accept: application/vnd.github.v3+json" \
+          https://api.github.com/repos/${{ github.repository }}/issues/$issue_number \
+          -d '{"custom_fields": {"Status": "In Test"}}'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
