--- a/.github/workflows/update-issue-status-in-test.yml
+++ b/.github/workflows/update-issue-status-in-test.yml
@@ -12,16 +12,33 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v2
 
-    - name: Update issue status to "In Test"
+    - name: Get issue number
+      id: get_issue_number
       run: |
         issue_number=$(echo "${{ github.head_ref }}" | grep -oP 'issue-\K[0-9]+')
-        response=$(curl -X PATCH \
-          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          https://api.github.com/repos/${{ github.repository }}/issues/$issue_number \
-          -d '{"custom_fields": {"Status": "In Test"}}')
-        echo "$response"
+        echo "issue_number=$issue_number" >> $GITHUB_ENV
+
+    - name: Get project ID
+      id: get_project_id
+      run: |
+        issue_number=${{ env.issue_number }}
+        project_id=$(gh issue view "$issue_number" --json projectIds -q ".projectIds[0]")  # Get the first project ID
+        echo "project_id=$project_id" >> $GITHUB_ENV
+
+    - name: Update issue custom field "Status" to "In Test"
+      run: |
+        issue_number=${{ env.issue_number }}
+        project_id=${{ env.project_id }}
+        issue_id=$(gh issue view "$issue_number" --json id -q ".id")
     
+        curl -X PATCH \
+          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Accept: application/vnd.github.v4+json" \
+          https://api.github.com/projects/columns/cards/$issue_id \
+          -d '{
+            "fields": {
+              "Status": "In Test"
+            }
+          }'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    
